height alignment fixes.

--- a/packages/client-mav/src/app/make-a-vis/main/main.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/main/main.component.sass
@@ -20,12 +20,11 @@
 
 .no-header
   .visualization-and-legend-view
-    
     .visualization
       height: 57.5rem
     
     .legend
-      height: 7rem
+      height: calc(100vh-57.5rem)
       background: grey
 
 ::ng-deep .no-header .x-dropzone
