--- a/packages/client-mav/src/app/make-a-vis/visualization-view/scatter-graph/scatter-graph.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/visualization-view/scatter-graph/scatter-graph.component.sass
@@ -1,6 +1,5 @@
 .scatter-graph
     .container
-        width: 100%
         height: 54.5rem
         display: flex
 
@@ -8,11 +7,11 @@
             width: 15.625rem
         
         .visualization
-            width: 88.75rem
+            width: calc(100vw - 31.25rem) // 15.625 from the y asix buttons column and 15.625 from the right column = 31.25rem
             .visualization-area
-                height: 85%
+                height: 46rem
             .x-axis-buttons
-                height: 15%
+                height: calc(100vw - 46rem)
             
         .graphic-variables-selection
             width: 15.625rem
